# zhutest

./: .gitignore  CMakeLists.txt  data-visualize.py  env.sh  glad.c  glad.h  main.cpp  power-on-n1x.sh  reset-n1x.sh  start.sh  utils.sh  zzz.sh
etc/: ddns-for-dhcp  ddns-for-networkmanager
nvbugs/: gdm3-perf-overhead.sh  high-interrupt-count.sh
src/: chroot.py  glad.c  zhu-opengl-gpufps.cpp  zhutest-irq-inspect.c
src/fex/lib64/: libc.so.6  libgcc_s.so.1  libm.so.6  libstdc++.so.6  libxxhash.so.0
src/usr/share/fex-emu/: Config.json
src/zhutest-gpufps/: glad.h  zhutest-gpufps.cpp
src/zhutest-irq-inspect/: .modules.order.cmd  .zhutest_irq_inspect.mod.cmd  .zhutest_irq_inspect.o.cmd  Makefile  zhutest_irq_inspect.c  zhutest_irq_inspect.mod
src/zhutest-null-driver/: dsomain.cpp  glad-api-conv.py  glad-exports.h  glad.c  glad.h  test.txt
